2004-02-20  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(ssl-wrappers): Renamed to ssl-wrappers.o.
	($(LIBNOSSLAWS)): Add dependance to ssl-wrappers.o.
	(build): Remove dependance from ssl-wrappers.
	Fix libnosslaws.a build, properly remove ssl-wrappers.o as this
	 must not be included in the standard AWS library.

2004-01-30  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(.SILENT): Simplify.

2004-01-21  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl.gpr:
	(Languages): Add support for Ada, ChangeLog and Project files.
	(Source_Files): Add ChangeLog and ssl.gpr.

2003-12-20  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl.gpr:
	(Ide): New package.

2003-12-17  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl-wrappers.ads, ssl-wrappers.adb:
	(X509_free): New routine.

	* ssl-thin.ads:
	(X509_free): New routine.
	(X509_NAME_oneline): Fix spec.
	
2003-12-17  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl-wrappers.ads, ssl-wrappers.adb:
	(SSL_CTX_set_verify): New procedure.
	(SSL_get_peer_certificate): Idem.
	(X509_NAME_oneline): Idem.
	(X509_get_subject_name): Idem.
	(X509_get_issuer_name): Idem.
	Fix DOS style line ending.

	* ssl-thin.ads:
	(Null_Pointer): New constant.
	(X509): New subtype.
	(X509_Name): New subtype.
	(SSL_VERIFY_NONE): New constant.
	(SSL_VERIFY_PEER): Idem.
	(SSL_VERIFY_FAIL_IF_NO_PEER_CERT): Idem.
	(SSL_VERIFY_CLIENT_ONCE): Idem.
	(SSL_F_SSL_VERIFY_CERT_CHAIN ): Idem.
	(SSL_CTX_set_verify): New procedure.
	(SSL_get_peer_certificate): Idem.
	(X509_NAME_oneline): Idem.
	(X509_get_subject_name): Idem.
	(X509_get_issuer_name): Idem.
	(SSL_CTX_set_default_verify_paths): Idem.

2003-12-16  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* ssl-thin.ads:
	(SSL_use_certificate_file): New routine binded.
	(SSL_use_PrivateKey_file): New routine binded.

2003-10-02  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(LIBNOSSLAWS): New variable.
	Use it anywhere reference to this lib is made.

2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile: